<resources>
    <string name="app_name">Trash map</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2lzaWxpZW5rYSIsImEiOiJja3VtajBpdWMwand1Mm50aHNpZ2QwaXloIn0.thJyUu4aO5VyCuiS3ilxoQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnLocalize">btnLocalize</string>
    <string name="btnFilter">btnFilter</string>
    <string name="addBin">Pridať kôš</string>
    <string name="forPlastic">Plast</string>
    <string name="forPaper">Papier</string>
    <string name="forMix">Zmesový odpad</string>
    <string name="addContainer">Pridať kontajner</string>
    <string name="forGlass">Sklo</string>
    <string name="forBio">Bio odpad</string>
    <string name="forMetal">Kov</string>
    <string name="addClothesCollect">Pridať zber šatstva</string>
    <string name="addCollectingSite">Pridať zálohovací automat</string>
    <string name="logIn">Prihlásiť sa</string>
    <string name="register">Registrovať sa</string>
    <string name="appInfo">Informácie o aplikácií</string>
    <string name="recycleInfo">Informácie o triedení</string>
    <string name="titleLogIn">Prihlásenie</string>
    <string name="name">Email</string>
    <string name="logInTxt">Prihlásiť sa</string>
    <string name="textPassword">Zadaj heslo</string>
    <string name="titleRegister">Registrácia</string>
    <string name="textReenterPassword">Zadaj heslo znovu</string>
    <string name="imgDescApplicationIcon">Application Icon</string>
    <string name="txtToContinueMusLogIn">Pre pokračovanie sa musíš prihlásiť alebo registrovať</string>
    <string name="add_more_info">Chceš pridať ďalšie informácie?</string>
    <string name="no">Nie</string>
    <string name="yes">Áno</string>
    <string name="logOut">Odhlásiť sa</string>
    <string name="userInfo">Informácie o užívateľovi</string>
    <string name="promtToFinifshAdding">Pre pridanie musis najprv potvrdit pridanie posledneho kosa</string>
    <string name="promtToLocalize">Pre pridanie musíš povoliť prístup k polohe</string>
    <string name="localizedTxt">Poloha získaná</string>
    <string name="lozalizationNotSuccessfulTxt">Nepodarilo sa nájsť polohu</string>
    <string name="IwantToLogInTxt">Áno, chcem sa odhlásiť</string>
    <string name="IdoNotWantToLogOut">Nie, nechcem sa odhlásiť</string>
    <string name="succesffulyLoggedOut">Boli ste úspešne odhlásený</string>
    <string name="toLogOut">ODHLÁSENIE Z ÚČTU</string>
    <string name="NotFullFuncionallityTxt">Po odhlásení nebude možné využívať plnú funkcionalitu aplikácie.</string>
    <string name="yesToDelete">Áno, chcem zmazať</string>
    <string name="successfullyDeleted">Váš účet bol úspešne odstránený</string>
    <string name="noToDelete">Nie, nechcem zmazať</string>
    <string name="ToDelete">ZMAZANIE ÚČTU</string>
    <string name="afterDeleteNoFullFuncionallity">Po zamazní účtu stratíte prístup k vášmu účtu.</string>
    <string name="noSuccessfulLogIn">Prihlásenie nebolo úspešné</string>
    <string name="successfulRegistration">Úspešná registrácia</string>
    <string name="emailRequierdText">Musíš zadať emailovú adresu</string>
    <string name="enterPassworText">Musíš zadať heslo</string>
    <string name="skCansAndBottles">Zálohovacie automaty</string>
    <string name="skGlassContainer">Kontajner - Sklo</string>
    <string name="skPlasticContainter">Kontajner - Plast</string>
    <string name="skPaperContainter">Kontajner - Papier</string>
    <string name="skCommunalContainter">Kontajner - Zmesový odpad</string>
    <string name="skMetalContainter">Kontajner - Kovy</string>
    <string name="skBioContainter">Kontajner - Bio odpad</string>
    <string name="skCommunalBin">Kôš - Zmesový odpad</string>
    <string name="skPlasticBin">Kôš - Plast</string>
    <string name="skPaperBin">Kôš - Papier</string>
    <string name="skClothesCollecting">Zber - Šatstvo</string>
    <string name="saveFilterTxt">Uložiť filter</string>

    <string-array name="separation_info">
        <item>Papier</item>
        <item>Plast</item>
        <item>Sklo</item>
        <item>Biologický odpad</item>
        <item>Komunálny odpad</item>
        <item>Zber šatstva</item>
        <item>Zálohovanie fliaš a plechoviek</item>
        <item>Kov</item>
    </string-array>
<!--    https://www.olo.sk/separacia-odpadov-triedeny-zber/-->
    <string-array name="separation_description">
        <item><b>Patrí:</b> Noviny, časopisy, letáky, katalógy, papierové tašky, kartónové obaly (stlačené),kancelársky papier, obálky, pohľadnice, listy.\n\n<b>Nepatrí:</b> Znečistený, mokrý, mastný papier, použité hygienické potreby (plienky, vložky), nápojové kartóny, použité papierové vreckovky a utierky.</item>
        <item><b>Patrí:</b> Stlačené alebo zošliapnuté PET fľaše z nápojov, plastové a mikroténové vrecká, baliace fólie, polystyrén, tégliky z jogurtov,obaly z CD, obaly z pracích a čistiacich prostriedkov a kozmetiky.\n\n<b>Nepatrí:</b> Mastné obaly so zvyškom potravín, podlahové krytiny, novodurové rúrky, obaly z nebezpečných látok, ako napr. motorových olejov,farieb a pod.</item>
        <item><b>Patrí:</b> Nevratné obaly zo skla z alkoholických alebo nealkoholických nápojov, poháre, tabuľové sklo z okien a dverí (väčšie množstvo patrí na zberný dvor), sklenené črepy a pod.\n\n<b>Nepatrí:</b> Porcelán, keramika, drôtené sklo, autosklo, zrkadlá, TV obrazovky, pozlátené pokovované sklo, alebo technické druhy skla.</item>
        <item><b>Patrí:</b> Šupky, čajové vrecúška, ovocie, zelenina, odpad z verejnej zelene, lístie, tráva, záhradný odpad.\n\n<b>Nepatrí:</b> Mäso, popol, stavebný odpad a pod.</item>
        <item><b>Patrí:</b> Zmesový komunálny odpad (zvyšok po vytriedení).\n\n<b>Nepatrí:</b> Biologicky rozložiteľný odpad, elektro-odpad a batérie, objemnný odpad, stavebný odpad, horľaviny.</item>
        <item><b>Patrí:</b> Akékľvek oblečenie, topánky.\n<b>Nepatrí: Hocičo iné.</b></item>
        <item><b>Patrí:</b> Nestlačené plechovky a flaše od nápojov označené Z.\n\n<b>Nepatrí:</b> Poškodené plechovky a flaše, nezálohovateľné obaly.</item>
        <item><b>Patrí:</b> Kovové obaly, konzervy, kovové výrobky a súčiastky, alobal, nápojové plechovky. Triedia sa podľa pokynov obce/mesta.\n\n<b>Nepatrí:</b> Kovové obaly kombinované s iným materiálom, napr. tuby z krémov a pást. Mäkké vrecúška, napr. z kávy. Kovové obaly obsahujúce zvyšky nebezpečných látok. Nadrozmerný kovový odpad je potrebné odniesť do zberní kovov, príp. do zberných dvorov.</item>
    </string-array>


</resources>