<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PopUpFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/popup_window_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/et_style"
        android:gravity="center"
        android:text="@string/txtToContinueMusLogIn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/popup_window_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_style"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/popup_window_text"
        app:layout_constraintStart_toStartOf="@+id/popup_window_text"
        app:layout_constraintTop_toBottomOf="@+id/popup_window_text" />

    <Button
        android:id="@+id/popup_window_button_log_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_style"
        android:text="@string/logInTxt"
        app:layout_constraintEnd_toEndOf="@+id/popup_window_button_register"
        app:layout_constraintStart_toStartOf="@+id/popup_window_button_register"
        app:layout_constraintTop_toBottomOf="@+id/popup_window_button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>